--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <i class="las la-bars"></i>
       </div>
       <!-- logo -->
-      <div class="logo animate__animated animate__rubberBand animate__delay-3s">
+      <div class="logo animate__animated animate__rubberBand animate__delay-5s animate__infinite">
         <img src="assets/images/logo.png" alt="" />
       </div>
       <!-- navigation link -->
@@ -90,11 +90,11 @@
     </section>
     <main>
       <!-- Home Section display when home link is clicked -->
-      <section id="home" class="active animate__animated animate__fadeInLeft">
+      <section id="home" class="active">
         <div class="meteor-shower"></div>
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12 info">
+            <div class="col-lg-6 col-md-12 col-sm-12 info  animate__animated animate__flipInY">
               <h1><span>I’m</span> kalaiarasi,</h1>
               <div class="field">
                 <h2></h2>
@@ -141,7 +141,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-6 col-sm-12 image">
+            <div class="col-lg-6 col-sm-12 image  animate__animated animate__backInRight animate__delay-1s">
               <div class="image-border">
                 <img
                   src="assets/images/person-home.png"
@@ -378,7 +378,7 @@
                 <h2>Education</h2>
               </header>
               <div class="items">
-                <div class="item last">
+                <div class="item last animate__animated animate__flipInX animate__delay-2s">
                   <div class="icon">
                     <i class="las la-university"></i>
                   </div>
@@ -387,7 +387,7 @@
                     <p>Anna University</p>
                   </div>
                 </div>
-                <div class="item">
+                <div class="item animate__animated animate__flipInX animate__delay-1s">
                   <div class="icon">
                     <i class="las la-university"></i>
                   </div>
@@ -403,7 +403,7 @@
                 <h2>Experience</h2>
               </header>
               <div class="items">
-                <div class="item last">
+                <div class="item last animate__animated animate__flipInX animate__delay-4s">
                   <div class="icon">
                     <i class="las la-briefcase"></i>
                   </div>
@@ -412,7 +412,7 @@
                     <p>TestCompany</p>
                   </div>
                 </div>
-                <div class="item">
+                <div class="item animate__animated animate__flipInX animate__delay-3s">
                   <div class="icon">
                     <i class="las la-briefcase"></i>
                   </div>
