--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
                   <span>&rsquo;&rsquo;</span>
                 </p>
                 <div class="writer">
-                  <span class="name"> Edgar Florentin </span>
-                  <span class="field">CEO of Company</span>
+                  <span class="name"> Peter </span>
+                  <span class="field">- CEO of Company,India</span>
                 </div>
               </div>
             </div>
@@ -563,13 +563,12 @@
                   <span>&rsquo;&rsquo;</span>
                   2.There are many variations and passages of..." is often
                   followed by "Lorem Ipsum," a placeholder text used in design
-                  and publishing. It's a common phrase to indicate the presence
-                  of various versions or extracts of this filler text.
+                  and publishing.
                   <span>&rsquo;&rsquo;</span>
                 </p>
                 <div class="writer">
-                  <span class="name"> Edgar Florentin </span>
-                  <span class="field">CEO of Company</span>
+                  <span class="name"> Robert </span>
+                  <span class="field">- Project Manager,UK</span>
                 </div>
               </div>
             </div>
@@ -577,15 +576,14 @@
               <div class="box">
                 <p>
                   <span>&rsquo;&rsquo;</span>
-                  3.There are many variations and passages of..." is often
-                  followed by "Lorem Ipsum," a placeholder text used in design
+                  3. "Lorem Ipsum," a placeholder text used in design
                   and publishing. It's a common phrase to indicate the presence
                   of various versions or extracts of this filler text.
                   <span>&rsquo;&rsquo;</span>
                 </p>
                 <div class="writer">
-                  <span class="name"> Edgar Florentin </span>
-                  <span class="field">CEO of Company</span>
+                  <span class="name"> Robert </span>
+                  <span class="field">- Lead, USA</span>
                 </div>
               </div>
             </div>
@@ -593,15 +591,13 @@
               <div class="box">
                 <p>
                   <span>&rsquo;&rsquo;</span>
-                  4.There are many variations and passages of..." is often
-                  followed by "Lorem Ipsum," a placeholder text used in design
-                  and publishing. It's a common phrase to indicate the presence
+                  4.It's a common phrase to indicate the presence
                   of various versions or extracts of this filler text.
                   <span>&rsquo;&rsquo;</span>
                 </p>
                 <div class="writer">
-                  <span class="name"> Edgar Florentin </span>
-                  <span class="field">CEO of Company</span>
+                  <span class="name"> Neil </span>
+                  <span class="field">- Senior Tech Lead, Dubai</span>
                 </div>
               </div>
             </div>
@@ -616,8 +612,8 @@
                   <span>&rsquo;&rsquo;</span>
                 </p>
                 <div class="writer">
-                  <span class="name"> Edgar Florentin </span>
-                  <span class="field">CEO of Company</span>
+                  <span class="name"> Julie </span>
+                  <span class="field"> - Technical Architect, USA</span>
                 </div>
               </div>
             </div>
